google-sheets/1.1/modules/ROOT/pages/google-sheets-connector-reference.adoc
= Google Sheets Connector 1.1 Reference - Mule 4

Anypoint Connector for Google Sheets (Google Sheets Connector) enables you to interface with the Google Sheets platform without having to interact with the Google Sheets API directly.

== Configurations
---
[[Config]]
=== Config

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Config_Oauth20, Oauth 2 0 Connection Provider>>
 | The connection types to provide to this configuration. | | x
| Response Timeout a| Number |  The timeout for the request to the remote service. |  1 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  MINUTES |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  AUTO |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

== Connection Types
[[Config_Oauth20]]

=== Oauth 2 0 Connection Provider

Uses OAuth consumer key and secret provided by the authorization service to get access to protected data.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>> |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>> |  |  |
| Connection Timeout a| Number |  Timeout for establishing connections to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean |  If false, each connection is closed after the first request is completed. |  true |
| Max Connections a| Number | Maximum number of outbound connections to keep open concurrently. |  -1 |
| Connection Idle Timeout a| Number |  Timeout for how long a connection can remain idle before it is closed. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Connection Idle Timeout* field.  |  SECONDS |
| Proxy Config a| <<Proxy>> |  Reusable configuration element for outbound connections through a proxy. |  |
| Stream Response a| Boolean |  Whether or not to stream received responses. |  false |
| Response Buffer Size a| Number |  The space, in bytes, for the buffer where the HTTP response is stored. |  -1 |
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS |  Protocol to use for communication. Valid values are HTTP and HTTPS. |  HTTP |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  The OAuth consumer key as registered with the service provider. |  | x
| Consumer Secret a| String |  The OAuth consumer secret as registered with the service provider. |  | x
| Authorization Url a| String |  The service provider's authorization endpoint URL |  \https://accounts.google.com/oauth2/auth/ |
| Access Token Url a| String |  The service provider's access token endpoint URL |  \https://oauth2.googleapis.com/token |
| Scopes a| String |  OAuth scopes to request during the dance. a|  

* \https://www.googleapis.com/auth/spreadsheets
* \https://www.googleapis.com
* /auth/drive.readonly |
| Resource Owner Id a| String |  Resource owner ID that each component should use if it isn't otherwise referenced. |  |
| Before a| String |  Name of a flow to execute before starting the OAuth dance. |  |
| After a| String | Name of a flow to execute after an access token is received. |  |
| Listener Config a| String | Reference to an <http:listener-config /> to use to create the listener that will catch the access token callback endpoint. |  | x
| Callback Path a| String | Path of the access token callback endpoint. |  | x
| Authorize Path a| String |  Path of the local HTTP endpoint that triggers the OAuth dance. |  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or should be accessed through an indirect URL, use this parameter to tell the OAuth provider the URL to use to access the callback. |  |
| Object Store a| String | Reference to the object store to use to store each resource owner ID's data. If not specified, Mule runtime automatically provisions the default object store. |  |
|===

== Sources

* <<NewRowListener>>
* <<NewSpreadsheetListener>>
* <<UpdatedRowListener>>

[[NewRowListener]]
=== New Row
`<google-sheets:new-row-listener>`

Listens for when a new row is added at the end of a sheet.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Response timeout a| Number |  |  30 |
| Response timeout time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  |  SECONDS |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster|  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Spreadsheet a| String |  ID of the spreadsheet |  | x
| Worksheet Name a| String |  Name of the worksheet |  | x
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[%autowidth.spread]
|===
| *Type* a| Any
|===

==== For Configurations

* <<Config>>

[[NewSpreadsheetListener]]
=== New Spreadsheet
`<google-sheets:new-spreadsheet-listener>`

Listens for when a new spreadsheet is created in the Google Drive associated with the connection. Google Sheets are not saved at the moment of creation; instead, they are saved the first time they are edited. Adding a new spreadsheet won’t trigger a flow until after that spreadsheet is edited and saved. 


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Response timeout a| Number |  |  30 |
| Response timeout time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  |  SECONDS |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost |  | 
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  | 
|===

==== Output

[%autowidth.spread]
|===
| *Type* a| Any
|===

==== For Configurations

* <<Config>>

[[UpdatedRowListener]]
=== Updated Row
`<google-sheets:updated-row-listener>`

Listens for when a row is created or updated in a sheet. 

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | 
| Response timeout a| Number |  |  30 |
| Response timeout time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  |  SECONDS |
| Include Newly Added Rows a| Boolean |  Indicates whether to include newly added rows in the output. |  false |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Spreadsheet a| String |  The ID of the spreadsheet |  | x
| Worksheet Name a| String |  The name of the worksheet |  | x
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

==== Output

[%autowidth.spread]
|===
| *Type* a| Any
|===

=== For Configurations

* <<Config>>

== Supported Operations
* <<CreateSpreadsheetsValuesRangeappendBySpreadsheetId>>
* <<GetFiles>>
* <<GetSpreadsheetsBySpreadsheetId>>
* <<GetSpreadsheetsValuesBySpreadsheetIdRange>>
* <<Unauthorize>>
* <<UpdateSpreadsheetsValuesBySpreadsheetIdRange>>

== Operations

[[CreateSpreadsheetsValuesRangeappendBySpreadsheetId]]
== Append Spreadsheets Values
`<google-sheets:create-spreadsheets-values-rangeappend-by-spreadsheet-id>`


Appends values to an existing spreadsheet, as determined by the specified range This operation makes an HTTP POST request to the `/spreadsheets/{spreadsheetId}/values/{range}:append` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Spreadsheet a| String |  ID of the target spreadsheet. |  | x
| Range a| String |  A1 notation of a range that determines where to start appending the values. The values are appended starting in the first column and after the last row in the specified range. |  | x
| Value Input Option a| Enumeration, one of:

** USER_ENTERED
** INPUT_VALUE_OPTION_UNSPECIFIED
** RAW |  Indicates how to interpret the new content: INPUT_VALUE: Default input value. This value must not be used. RAW: Append the content as is, without parsing it. USER_ENTERED: Parse the values as if they were entered into the Google Sheets UI. |  USER_ENTERED |
| Insert Data Option a| Enumeration, one of:

** INSERT_ROWS
** OVERWRITE |  Determines how existing data is changed when new data is input. |  | 
| Content Type a| String |  Type of content |  application/json |
| Spreadsheets Values Rangeappend Content a| Any |  Content to append |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  Timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* GOOGLE-SHEETS:BAD_REQUEST
* GOOGLE-SHEETS:CLIENT_ERROR
* GOOGLE-SHEETS:CONNECTIVITY
* GOOGLE-SHEETS:INTERNAL_SERVER_ERROR
* GOOGLE-SHEETS:NOT_ACCEPTABLE
* GOOGLE-SHEETS:NOT_FOUND
* GOOGLE-SHEETS:RETRY_EXHAUSTED
* GOOGLE-SHEETS:SERVER_ERROR
* GOOGLE-SHEETS:SERVICE_UNAVAILABLE
* GOOGLE-SHEETS:TIMEOUT
* GOOGLE-SHEETS:TOO_MANY_REQUESTS
* GOOGLE-SHEETS:UNAUTHORIZED
* GOOGLE-SHEETS:UNSUPPORTED_MEDIA_TYPE


[[GetFiles]]
== List Drive Files
`<google-sheets:get-files>`


Returns a list of the user's Google Drive files. This operation makes an HTTP GET request to the `/files` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Page Size a| String |  Page size for the returned results |  100 |
| Query a| String |  Search query |  |
| Fields a| String |  Paths to the fields to include in the response. Use `*` to retrieve all fields. |  |
| Order By a| String | Order By | |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration.  |  |
| Response Timeout a| Number |  Timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
|===

=== For Configurations

* <<Config>>

=== Throws

* GOOGLE-SHEETS:BAD_REQUEST
* GOOGLE-SHEETS:CLIENT_ERROR
* GOOGLE-SHEETS:CONNECTIVITY
* GOOGLE-SHEETS:INTERNAL_SERVER_ERROR
* GOOGLE-SHEETS:NOT_ACCEPTABLE
* GOOGLE-SHEETS:NOT_FOUND
* GOOGLE-SHEETS:SERVER_ERROR
* GOOGLE-SHEETS:SERVICE_UNAVAILABLE
* GOOGLE-SHEETS:TIMEOUT
* GOOGLE-SHEETS:TOO_MANY_REQUESTS
* GOOGLE-SHEETS:UNAUTHORIZED
* GOOGLE-SHEETS:UNSUPPORTED_MEDIA_TYPE


[[GetSpreadsheetsBySpreadsheetId]]
== Get Spreadsheet Properties
`<google-sheets:get-spreadsheets-by-spreadsheet-id>`


Returns the Properties of the specified Google spreadsheet. This operation makes an HTTP GET request to the `/spreadsheets/{spreadsheetId}?fields=sheets.properties` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Spreadsheet Id a| String |  ID of the target spreadsheet. |  | x
| Fields a| String | Paths to the fields to include in the response. Use `*` to retrieve all fields. |  |
| Content Type a| String |  Content type |  application/json |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  Timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field.  |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* GOOGLE-SHEETS:BAD_REQUEST
* GOOGLE-SHEETS:CLIENT_ERROR
* GOOGLE-SHEETS:CONNECTIVITY
* GOOGLE-SHEETS:INTERNAL_SERVER_ERROR
* GOOGLE-SHEETS:NOT_ACCEPTABLE
* GOOGLE-SHEETS:NOT_FOUND
* GOOGLE-SHEETS:RETRY_EXHAUSTED
* GOOGLE-SHEETS:SERVER_ERROR
* GOOGLE-SHEETS:SERVICE_UNAVAILABLE
* GOOGLE-SHEETS:TIMEOUT
* GOOGLE-SHEETS:TOO_MANY_REQUESTS
* GOOGLE-SHEETS:UNAUTHORIZED
* GOOGLE-SHEETS:UNSUPPORTED_MEDIA_TYPE


[[GetSpreadsheetsValuesBySpreadsheetIdRange]]
== Get Spreadsheets Values
`<google-sheets:get-spreadsheets-values-by-spreadsheet-id-range>`


Returns the values from the specified range in a Google spreadsheet. This operation makes an HTTP GET request to the `/spreadsheets/{spreadsheetId}/values/{range}` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Spreadsheet a| String |  ID of the target spreadsheet. |  | x
| Range a| String |  A1 notation of the range for which to return properties. You can specify multiple ranges.|  | x
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  Timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* GOOGLE-SHEETS:BAD_REQUEST
* GOOGLE-SHEETS:CLIENT_ERROR
* GOOGLE-SHEETS:CONNECTIVITY
* GOOGLE-SHEETS:INTERNAL_SERVER_ERROR
* GOOGLE-SHEETS:NOT_ACCEPTABLE
* GOOGLE-SHEETS:NOT_FOUND
* GOOGLE-SHEETS:RETRY_EXHAUSTED
* GOOGLE-SHEETS:SERVER_ERROR
* GOOGLE-SHEETS:SERVICE_UNAVAILABLE
* GOOGLE-SHEETS:TIMEOUT
* GOOGLE-SHEETS:TOO_MANY_REQUESTS
* GOOGLE-SHEETS:UNAUTHORIZED
* GOOGLE-SHEETS:UNSUPPORTED_MEDIA_TYPE

[[Unauthorize]]
== Unauthorize
`<google-sheets:unauthorize>`


Deletes all of the access token information associated with a given resource owner ID, so that it's impossible to execute an operation for that user without repeating the authorization dance.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Resource Owner Id a| String | ID of the resource owner for whom to invalidate access.  |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
|===

=== For Configurations

* <<Config>>

[[UpdateSpreadsheetsValuesBySpreadsheetIdRange]]
== Update Spreadsheets Values
`<google-sheets:update-spreadsheets-values-by-spreadsheet-id-range>`


Updates the values of a spreadsheet at the specified range. This operation makes an HTTP PUT request to the `/spreadsheets/{spreadsheetId}/values/{range}` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Spreadsheet a| String |  ID of the target spreadsheet. |  | x
| Range a| String |  A1 notation of the range for which to update values. |  | x
| Value Input Option a| Enumeration, one of:

** USER_ENTERED
** INPUT_VALUE_OPTION_UNSPECIFIED
** RAW a|  Indicates how to interpret the new content: 

* INPUT_VALUE: Default input value. This value must not be used. 
* RAW: Append the content as is, without parsing it. 
* USER_ENTERED: Parse the values as if they were entered into the Google Sheets UI. |  USER_ENTERED |
| Content Type a| String |  Content type |  application/json |
| Spreadsheets Values Rangeappend Content a| Any |  Updated values |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  Timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field.  |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* GOOGLE-SHEETS:BAD_REQUEST
* GOOGLE-SHEETS:CLIENT_ERROR
* GOOGLE-SHEETS:CONNECTIVITY
* GOOGLE-SHEETS:INTERNAL_SERVER_ERROR
* GOOGLE-SHEETS:NOT_ACCEPTABLE
* GOOGLE-SHEETS:NOT_FOUND
* GOOGLE-SHEETS:RETRY_EXHAUSTED
* GOOGLE-SHEETS:SERVER_ERROR
* GOOGLE-SHEETS:SERVICE_UNAVAILABLE
* GOOGLE-SHEETS:TIMEOUT
* GOOGLE-SHEETS:TOO_MANY_REQUESTS
* GOOGLE-SHEETS:UNAUTHORIZED
* GOOGLE-SHEETS:UNSUPPORTED_MEDIA_TYPE



== Types
[[DefaultHeader]]
=== Default Header

Headers automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|===

[[Proxy]]
=== Proxy

Configures the settings used to connect through a proxy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server.  |  | x
| Port a| Number | Port of the proxy server.  |  | x
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
| Non Proxy Hosts a| String |  |  |
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app. 

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Trust Store

Configures the TLS truststore.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | The type of truststore used. |  |
| Algorithm a| String | Algorithm used by the truststore. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Key Store

Configures the TLS keystore.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of keystore used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Algorithm used by the keystore. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[CrlFile]]
=== CRL File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[HttpResponseAttributes]]
=== HTTP Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number |  |  | x
| Headers a| Object |  |  | x
| Reason Phrase a| String |  |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that is allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which these attributes are expressed |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable


[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the memory stream. If the stream data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. Default value is 100 instances. | 100 |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. Default value is 100 instances. | 100 |
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit.  |  |
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
https://help.mulesoft.com[MuleSoft Help Center]
